Unit and integration test for categorie and produit